--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.10.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "nodemon": "^3.1.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
     "sequelize": "^6.37.3"
