--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@chakra-ui/modal": "^2.2.9",
     "@chakra-ui/popover": "^2.1.8",
     "@chakra-ui/portal": "^2.0.15",
+    "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/system": "^2.3.5",
     "@chakra-ui/tooltip": "^2.2.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@prisma/client": "^5.15.0",
     "@tanstack/react-table": "^8.7.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -21,10 +23,13 @@
     "@types/react-dom": "^18.0.6",
     "apexcharts": "3.35.5",
     "framer-motion": "^7.10.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0",
     "next": "^14.0.2",
     "next-auth": "^4.24.7",
+    "next-connect": "^1.0.0",
     "next-transpile-modules": "^9.0.0",
+    "prisma": "^5.15.0",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
@@ -71,6 +76,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
+    "@types/multer": "^1.4.11",
     "@types/node": "^18.7.6",
     "@types/react": "18.2.0",
     "@types/react-calendar": "^3.5.2",
